--- a/webroot/css/main.css
+++ b/webroot/css/main.css
@@ -14,6 +14,10 @@ a:hover {
     color: limegreen;
 }
 
+tr:hover{
+    background-color: #ccc;
+}
+
 .cuerpo-formulario {
     background-color: #BDBDBD;
     padding: 20px;
@@ -29,4 +33,83 @@ a:hover {
     color: white;
     font-size: 12px;
     padding-top: 10px;
+}
+
+.match-time{
+    padding-left: 50px;
+}
+
+.match {
+    border-radius: 15px;
+    background-color: #eee;
+    width: 100%; 
+    height: 50%; 
+    float: left; 
+    text-align:top;
+    margin-left: 30px;
+}
+.match:hover {
+    background-color: #ccc
+}
+
+.teamtext {
+    text-align: center
+}
+
+.teamImg1 {
+    float: right;
+    width: 60px;
+    border-radius: 2px;
+}
+.teamImg2 {
+    float: left;
+    width: 60px;
+    border-radius: 2px;
+}
+
+
+.teamSpace {
+    width: 45%; 
+    float: left; 
+    text-align: right
+}
+
+.vs{
+    width: 10%; 
+    float: left; 
+    text-align: center; 
+    margin-top: 0.6em
+}
+
+.recientes{
+    margin-top: 40px; 
+    width: 75%;
+}
+
+.filaReciente{   
+    text-align: center; 
+    border-bottom: 1px solid #ddd;
+}
+.recienteTeam1 {
+     float: right;
+    width: 40px;
+    border-radius: 2px;
+}
+.recienteTeam2 {
+     float: left;
+    width: 40px;
+    border-radius: 2px;
+    
+}
+
+.estadisticas{
+    margin-top: 40px; 
+    width: 75%;
+    border: 1px solid black;
+    text-align: center;
+}
+
+.points {
+    color: yellow;
+    
 }
