--- a/webroot/css/main.css
+++ b/webroot/css/main.css
@@ -109,7 +109,13 @@ tr:hover{
     text-align: center;
 }
 
-.points {
-    color: yellow;
-    
+.coins {
+    margin-left: 85%;
+    text-align: right;
+    font-size: 24px;
+}
+
+.imgcoin{
+    width: 25px;
+    float: right;
 }
